change picture and fix overlap of cover image

--- a/hitchhikers.css
+++ b/hitchhikers.css
@@ -1,4 +1,15 @@
 /*****TRIP DETAILS*******/
+#special{
+    background: url('img-4.jpg') no-repeat center center;
+
+  background-position: 0 auto;
+  font-family: 'Open Sans', sans-serif;
+  background-repeat: no-repeat;
+  padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+  padding-bottom: 50px;
+  text-align: center;
+  background-size: cover;
+}
 
 .trip-details h3 { 
   font-family: 'Pacifico', cursive;
@@ -34,8 +45,8 @@ html{
 
 #content { 
   text-align: center; 
-  padding-top: 27%;
-  padding-bottom: 210px
+  padding-top: 30%;
+  padding-bottom: 100px
 }
 
 h1{
@@ -65,6 +76,10 @@ hr{
 .navbar-default {
   background-color: #004e64;
   border: #004e64;
+}
+
+.navbar{
+  margin-bottom: 0px;
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -195,6 +210,35 @@ hr{
 color: #004e64;
 }
 /*****************************/ 
+.intro-header {
+    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-bottom: 50px;
+    text-align: center;
+    color: #f8f8f8;
+    background: url('img-4.jpg') no-repeat center center;
+    background-size: cover;
+}
 
+.intro-message {
+    position: relative;
+    padding-top: 20%;
+    padding-bottom: 20%;
+}
+
+.intro-message > h1 {
+    margin: 0;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-size: 5em;
+}
+
+.intro-divider {
+    width: 400px;
+    border-top: 1px solid #f8f8f8;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+.intro-message > h3 {
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+}
 
 
